tweak some layout issues

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -54,7 +54,7 @@ h3 { font-size: var(--h3-size); }
 h4 { font-size: var(--h4-size); }
 h5 { font-size: var(--h5-size); }
 
-li { margin-right: 2%; }
+li { margin-right: min(5%, 3em); }
 
 th,td { text-align: left; }
 
